Docs/examples/k8s-traefik-sni/ingressroute-k3d.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mqtt-ingressroute
  namespace: mqtt
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`mqtt.local.rnd7.de`)
      services:
        - name: hivemq
          port: 8883
  tls:
    passthrough: true
